--- a/School.html
+++ b/School.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="School.js"></script>
-    <title>JavaScript</title>
+
+    <title>School</title>
+<!--    <script src="School.js"></script>    <script src="School.js" type="module" ></script>
+    <script src="test.js" type="module"></script>-->
 </head>
 <body>
-    <!---nav, header, footer section, article, aside -->
+    <!--DOM - DOCUMENT OBJECT MODULE-->
+<h1 class="demo"></h1>
+
+    <h1>My header</h1>
     
-    <!--Internal JavaScript-->
+    <a href="#" target="_blank ">My Link</a>
+
+    <script>
+        //document.getElementByID
+        const h1 = document.querySelector("h1");
+        h1.innerHTML = "New Header";
+
+
+    </script>
+
 
 
 </body>
