--- a/School.html
+++ b/School.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="School.js"></script>
+    <link rel="stylesheet" href="School.css">
 
     <title>School</title>
 <!--    <script src="School.js"></script>    <script src="School.js" type="module" ></script>
@@ -25,6 +27,20 @@
 
     </script>
 
+
+    <h1>task-planner</h1>
+    <div class="to-do">
+      <input type="text">
+      <button class="add-task">Add</button>
+    </div>
+  
+    <ul class="display-item">
+      <h2>to-do today</h2>
+    </ul>
+  
+    <ul class="completed-tasks">
+      <h2>Completed tasks</h2>
+    </ul>
 
 
 </body>
