--- a/InteractiveWebApp.html
+++ b/InteractiveWebApp.html
@@ -134,8 +134,8 @@
 
 
   <p class="Fill-in-text">The user defiantly has control over the websites
-    interfaces from the hamburger menu in the top left to the very bottom
-    where Is footer is displayed, When the user enters the webpage I want
+    interfaces from the hamburger menu in the top right to the very bottom
+    where the footer is displayed, When the user enters the webpage I want
     the user to experience bright colors and futuristic looking backgrounds
     while also utilizing the full control of the fully functional
     calculator.
@@ -151,41 +151,64 @@
     The application is smooth on scroll and easy to use while the buttons
     are big and bold making it easier to see and identify the numbers you
     need for the equation
-
+<br>
+<br>
+    Refferance
+    <br>
+    <a href="https://www.w3schools.com/cssref/pr_pos_z-index.php">Z-index</a>,
+    <a href="https://www.w3schools.com/cssref/pr_class_visibility.php">Visability</a>,
+    <a href="https://www.w3schools.com/howto/howto_js_mobile_navbar.asp">Hamburger menu</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/:first-child">Nav first-child</a>
   </p>
 
   <br>
-  <h4>Test Case </h4>
+  <div class="break-in-between">
+  <h4>Test Case </h4></div>
   <div class="Test">
     <p class="paragraph-test-line">Description:Open hamburger menu anywhere down the page<br>
       Output:Could only open top of the screen<br>
       Result:Failed<br>
+      <br>
+      <br>
+
+      Description:Parllax works well
+      <br>
+      Output:Scrolls well and smooth
+      <br>
+      Result:Pass
+      <br>
     </p>
 
     <p class="paragraph-test-line-2">
-      Description:Open hamburger menu anywhere down the page
+      Description:5+5=
       <br>
-      Output:Could only open top of the screen
+      Output:10
+      <br>
+      Result:Pass
+      <br>
+      <br>
+      <br>
+      Description:When the screen size is smaller the "thank you" Div will show at the bottom of the calculator
+      <br>
+      Output:Hidden 920x538  Visable 1480x850
       <br>
       Result:Failed
       <br>
     </p>
+
+    
   </div>
 
 
   <footer>
     <ul class="icons">
 
-      <li><a href="#">
-          <ion-icon name="logo-linkedin"></ion-icon>
-        </a></li>
-      <li><a href="#">
-          <ion-icon name="logo-facebook"></ion-icon>
-        </a></li>
-      <li><a href="#">
-          <ion-icon name="logo-instagram"></ion-icon>
-        </a></li>
+      <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+      <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+      <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+    
     </ul>
+
     <ul class="menu">
       <li><a href="#">Home</a></li>
       <li><a href="#">About Me</a></li>
@@ -193,7 +216,7 @@
       <li><a href="#">Contact Me</a></li>
     </ul>
     <div class="footer-copyright">
-      <p>Copyright @ 2022 All Rights Reserved.</p>
+      <p>Copyright @ 2022 All Rights Reserved by Timothy L.</p>
     </div>
 
 </html>
