--- a/InteractiveWebApp.html
+++ b/InteractiveWebApp.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<h2>IT5039_Assessment 1 20220632 Timothy L</h2>
 
   <!--HamBurger Icon-->
   <div class="bars" id="nav-action">
@@ -51,6 +51,15 @@
       bars.classList.toggle('active');
       nav.classList.toggle('visible');
     }</script>
+
+<div id="MyClockDisplay" class="clock">
+<body onload="showTime()"></div>
+  <div class="centerText">
+<a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_timing_clock" 
+style="text-decoration: none;
+ color: #ff7171;
+ ">Click for refferance</a>
+</div>
 
   <!--This section will have the calculator incase i cant design my own game/app -->
   <h1 class="calc-text">JavaScript Calculator</h1>
@@ -152,13 +161,14 @@
     are big and bold making it easier to see and identify the numbers you
     need for the equation
 <br>
+    I have also decided to add a small calculate just to show how i have interacted with the DOM
 <br>
     Refferance
     <br>
-    <a href="https://www.w3schools.com/cssref/pr_pos_z-index.php">Z-index</a>,
-    <a href="https://www.w3schools.com/cssref/pr_class_visibility.php">Visability</a>,
-    <a href="https://www.w3schools.com/howto/howto_js_mobile_navbar.asp">Hamburger menu</a>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/:first-child">Nav first-child</a>
+    <a href="https://www.w3schools.com/cssref/pr_pos_z-index.php" style="color: aqua;" >Z-index</a>,
+    <a href="https://www.w3schools.com/cssref/pr_class_visibility.php" style="color: aqua;">Visability</a>,
+    <a href="https://www.w3schools.com/howto/howto_js_mobile_navbar.asp" style="color: aqua;">Hamburger menu</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/:first-child" style="color: aqua;">Nav first-child</a>
   </p>
 
   <br>
@@ -167,11 +177,11 @@
   <div class="Test">
     <p class="paragraph-test-line">Description:Open hamburger menu anywhere down the page<br>
       Output:Could only open top of the screen<br>
-      Result:Failed<br>
+      Result:Failed</p><br> 
       <br>
       <br>
-
-      Description:Parllax works well
+      <br>
+      <p class="paragraph-test-line">Description:Parllax works well
       <br>
       Output:Scrolls well and smooth
       <br>
@@ -184,17 +194,19 @@
       <br>
       Output:10
       <br>
-      Result:Pass
+      Result:Pass</p>
       <br>
       <br>
       <br>
+      <p class="paragraph-test-line-2">
       Description:When the screen size is smaller the "thank you" Div will show at the bottom of the calculator
       <br>
       Output:Hidden 920x538  Visable 1480x850
       <br>
       Result:Failed
       <br>
-    </p>
+   </p>
+
 
     
   </div>
