--- a/InteractiveWebApp.html
+++ b/InteractiveWebApp.html
@@ -136,15 +136,15 @@ style="text-decoration: none;
   <!----Hidden h2 under the calculator app, im not to sure how to fully hide or implement this feature yet.-->
   <h2 class="under">Thank you for <br> using the application !</h2>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-
+<div class="block">
   <h3>Refferance on <a
       href="https://xd.adobe.com/ideas/process/ui-design/4-golden-rules-ui-design/#:~:text=The%20UI%20design%20principals%20are,Make%20user%20interfaces%20consistent"
       style="text-decoration: none; color: white;">UI/UX</a> </h3>
-
+</div>
 
   <p class="Fill-in-text">The user defiantly has control over the websites
     interfaces from the hamburger menu in the top right to the very bottom
-    where the footer is displayed, When the user enters the webpage I want
+    where the footer is displayed, <br> When the user enters the webpage I want
     the user to experience bright colors and futuristic looking backgrounds
     while also utilizing the full control of the fully functional
     calculator.
